--- a/python/README
+++ b/python/README
@@ -5,9 +5,17 @@ source .venv/bin/activate
 python3 -m pip install -r requirements.txt
 ```
 
+
 Run the program (sudo may be needed on Linux for USB privileges)
 ```
 sudo .venv/bin/python mystat.py
+```
+
+On Linux, the following commands are sometimes needed:
+```
+export LD_LIBRARY_PATH=$(python3 -c "import PyQt5.QtCore; print(PyQt5.QtCore.QLibraryInfo.location(PyQt5.QtCore.QLibraryInfo.LibrariesPath))"):$LD_LIBRARY_PATH
+export QT_QPA_PLATFORM_PLUGIN_PATH=$(python3 -c "import PyQt5.QtCore; print(PyQt5.QtCore.QLibraryInfo.location(PyQt5.QtCore.QLibraryInfo.PluginsPath))")
+
 ```
 
 To package the app, run
